--- a/app/views/pages/home.haml
+++ b/app/views/pages/home.haml
@@ -1,6 +1,8 @@
 .jumbotron
 	.container
 		%h2 Contacts
+		%p
+			%a.btn.btn-primary.btn-lg{:href => new_contact_path, :role => "button"} Add		
 .container
 	/ Example row of columns
 	.row
@@ -11,7 +13,7 @@
 					%p= c.email
 					%p= c.mobile
 					%p
-						%a.btn.btn-default{:href => "#", :role => "button"} View details »
+						%a.btn.btn-default{:href => contact_path(id: c.id), :role => "button"} View details »
 
 	%hr/
 	%footer
