--- a/app/views/contacts/_form.html.haml
+++ b/app/views/contacts/_form.html.haml
@@ -5,39 +5,40 @@
       %ul
         - @contact.errors.full_messages.each do |msg|
           %li= msg
-
-  .field
-    = f.label :first_name
-    = f.text_field :first_name
-  .field
-    = f.label :last_name
-    = f.text_field :last_name
-  .field
-    = f.label :email
-    = f.text_field :email
-  .field
-    = f.label :mobile
-    = f.text_field :mobile
-  .field
-    = f.label :home_phone
-    = f.text_field :home_phone
-  .field
-    = f.label :office_phone
-    = f.text_field :office_phone
-  .field
-    = f.label :street_address
-    = f.text_field :street_address
-  .field
-    = f.label :city
-    = f.text_field :city
-  .field
-    = f.label :state
-    = f.text_field :state
-  .field
-    = f.label :country
-    = f.text_field :country
-  .field
-    = f.label :permalink
-    = f.text_field :permalink
-  .actions
-    = f.submit 'Save'
+  .form-group
+    .field
+      = f.label :first_name, :class => 'form-label'
+      = f.text_field :first_name, :class => 'form-control'
+    .field
+      = f.label :last_name, :class => 'form-label'
+      = f.text_field :last_name, :class => 'form-control'
+  .form-group
+    .field
+      = f.label :email, :class => 'form-label'
+      = f.text_field :email, :class => 'form-control'
+    .field
+      = f.label :mobile, :class => 'form-label'
+      = f.text_field :mobile, :class => 'form-control'
+    .field
+      = f.label :home_phone, :class => 'form-label'
+      = f.text_field :home_phone, :class => 'form-control'
+    .field
+      = f.label :office_phone, :class => 'form-label'
+      = f.text_field :office_phone, :class => 'form-control'
+  .from-group
+    .field
+      = f.label :street_address, :class => 'form-label'
+      = f.text_field :street_address, :class => 'form-control'
+    .field
+      = f.label :city, :class => 'form-label'
+      = f.text_field :city, :class => 'form-control'
+    .field
+      = f.label :state, :class => 'form-label'
+      = f.text_field :state, :class => 'form-control'
+    .field
+      = f.label :country, :class => 'form-label'
+      = f.text_field :country, :class => 'form-control'
+  %br
+  .form-group
+    .actions
+      = f.submit 'Save', :class => 'btn btn-primary btn-block'
