--- a/app/views/contacts/edit.html.haml
+++ b/app/views/contacts/edit.html.haml
@@ -1,7 +1,10 @@
 %h1 Editing contact
+= link_to @contact do
+  .btn.btn-info
+    %span Show
+|
+= link_to contacts_path do
+  .btn.btn-primary
+    %span Back
 
 = render 'form'
-
-= link_to 'Show', @contact
-\|
-= link_to 'Back', contacts_path
