--- a/app/views/contacts/new.html.haml
+++ b/app/views/contacts/new.html.haml
@@ -1,5 +1,9 @@
+= link_to contacts_path do
+  .btn.btn-info
+    %span Back
+
 %h1 New contact
 
 = render 'form'
 
-= link_to 'Back', contacts_path
+
