--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -18,10 +18,16 @@
 							%span.icon-bar
 						%a.navbar-brand{:href => root_path} contact-list
 					#navbar.navbar-collapse.collapse
-						%form.navbar-form.navbar-right
-							.form-group
-								%input.form-control{:placeholder => "search", :type => "text"}/
-							%button.btn.btn-success{:type => "submit"} Search	
+						.navbar-form.navbar-right
+							= form_tag search_path, method: 'get' do
+								= text_field_tag :query, params[:query], :class => 'form-control', placeholder: 'Search here'
+								= submit_tag "Search", :class => 'btn btn-success'
 			%br
 			%br
-			= yield
+			%br
+			%br
+			.contaner
+				= yield
+			%hr/
+			%footer
+				%p.pull-right © 2017
