--- a/app/views/contacts/_form.html.haml
+++ b/app/views/contacts/_form.html.haml
@@ -1,8 +1,8 @@
 = form_for @contact do |f|
   - if @contact.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@contact.errors.count, "error")} prohibited this contact from being saved:"
-      %ul
+      %h4= "#{pluralize(@contact.errors.count, "error")} prohibited this contact from being saved:"
+      %ul.alert-danger
         - @contact.errors.full_messages.each do |msg|
           %li= msg
   .form-group
