--- a/app/views/contacts/edit.html.haml
+++ b/app/views/contacts/edit.html.haml
@@ -1,10 +1,7 @@
-%h1 Editing contact
+
 = link_to @contact do
-  .btn.btn-info
-    %span Show
-|
-= link_to contacts_path do
-  .btn.btn-primary
-    %span Back
+	.btn.btn-info
+		%i.fa.fa-eye
+		%span Show
 
 = render 'form'
