--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -31,6 +31,9 @@
 							%span.icon-bar
 						%a.navbar-brand{:href => root_path} contact-list
 					#navbar.navbar-collapse.collapse
+						= link_to new_contact_path, :class => 'btn btn-default navbar-btn btn-primary btn-medium' do
+							%i.fa.fa-plus
+							%span Add New Contact
 						.navbar-form.navbar-right
 							= form_tag search_path, method: 'get' do
 								= text_field_tag :query, params[:query], :class => 'form-control', placeholder: 'Search here'
@@ -40,6 +43,9 @@
 			%br
 			%br
 			.contaner
+				- unless current_page?(root_path)
+					%ol.breadcrumb
+						= render_breadcrumbs :tag => :li, :separator => ""
 				= yield
 			%hr/
 			%footer
