--- a/app/views/contacts/_form.html.haml
+++ b/app/views/contacts/_form.html.haml
@@ -8,36 +8,36 @@
   .form-group
     .field
       = f.label :first_name, :class => 'form-label'
-      = f.text_field :first_name, :class => 'form-control'
+      = f.text_field :first_name, :class => 'form-control', :placeholder => 'Example: Jon'
     .field
       = f.label :last_name, :class => 'form-label'
-      = f.text_field :last_name, :class => 'form-control'
+      = f.text_field :last_name, :class => 'form-control', :placeholder => 'Example: Doe'
   .form-group
     .field
       = f.label :email, :class => 'form-label'
-      = f.text_field :email, :class => 'form-control'
+      = f.text_field :email, :class => 'form-control', :placeholder => 'Example: email@domain.com'
     .field
       = f.label :mobile, :class => 'form-label'
-      = f.text_field :mobile, :class => 'form-control'
+      = f.text_field :mobile, :class => 'form-control', :placeholder => 'Example: +977 9877665544'
     .field
       = f.label :home_phone, :class => 'form-label'
-      = f.text_field :home_phone, :class => 'form-control'
+      = f.text_field :home_phone, :class => 'form-control', :placeholder => 'Example: +977 01 11223344'
     .field
       = f.label :office_phone, :class => 'form-label'
-      = f.text_field :office_phone, :class => 'form-control'
+      = f.text_field :office_phone, :class => 'form-control', :placeholder => '+977 01 9999999'
   .from-group
     .field
       = f.label :street_address, :class => 'form-label'
-      = f.text_field :street_address, :class => 'form-control'
+      = f.text_field :street_address, :class => 'form-control', :placeholder => 'nearest landmark / street name'
     .field
       = f.label :city, :class => 'form-label'
-      = f.text_field :city, :class => 'form-control'
+      = f.text_field :city, :class => 'form-control', :placeholder => 'city'
     .field
       = f.label :state, :class => 'form-label'
-      = f.text_field :state, :class => 'form-control'
+      = f.text_field :state, :class => 'form-control', :placeholder => 'state / county'
     .field
       = f.label :country, :class => 'form-label'
-      = f.text_field :country, :class => 'form-control'
+      = f.text_field :country, :class => 'form-control', :placeholder => 'Country'
   %br
   .form-group
     .actions
