--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -29,20 +29,21 @@
 							%span.icon-bar
 							%span.icon-bar
 							%span.icon-bar
-						%a.navbar-brand{:href => root_path} contact-list
-						= link_to new_contact_path, :class => 'btn btn-default navbar-btn btn-primary btn-medium' do
-							%i.fa.fa-plus
-							%span Add New Contact
+						%span
+							%a.navbar-brand{:href => root_path} contact-list
+							= link_to new_contact_path, :class => 'btn btn-default navbar-btn btn-primary btn-medium' do
+								%i.fa.fa-plus
+								%span Add Contact
 					#navbar.navbar-collapse.collapse
 						.navbar-form.navbar-right
 							= form_tag search_path, method: 'get' do
-								= text_field_tag :query, params[:query], :class => 'form-control', placeholder: 'Search here'
+								= text_field_tag :query, params[:query], :class => 'form-control', placeholder: 'Search for contact'
 								= submit_tag "Search", :class => 'btn btn-success'
 			%br
 			%br
 			%br
 			%br
-			.contaner
+			.container
 				- unless current_page?(root_path)
 					%ol.breadcrumb
 						= render_breadcrumbs :tag => :li, :separator => ""
