--- a/app/views/contacts/_form.html.haml
+++ b/app/views/contacts/_form.html.haml
@@ -19,26 +19,11 @@
     .field
       = f.label :mobile, :class => 'form-label'
       = f.text_field :mobile, :class => 'form-control', :placeholder => 'Example: +977 9877665544'
-    .field
-      = f.label :home_phone, :class => 'form-label'
-      = f.text_field :home_phone, :class => 'form-control', :placeholder => 'Example: +977 01 11223344'
-    .field
-      = f.label :office_phone, :class => 'form-label'
-      = f.text_field :office_phone, :class => 'form-control', :placeholder => '+977 01 9999999'
-  .from-group
-    .field
-      = f.label :street_address, :class => 'form-label'
-      = f.text_field :street_address, :class => 'form-control', :placeholder => 'nearest landmark / street name'
-    .field
-      = f.label :city, :class => 'form-label'
-      = f.text_field :city, :class => 'form-control', :placeholder => 'city'
-    .field
-      = f.label :state, :class => 'form-label'
-      = f.text_field :state, :class => 'form-control', :placeholder => 'state / county'
-    .field
-      = f.label :country, :class => 'form-label'
-      = f.text_field :country, :class => 'form-control', :placeholder => 'Country'
   %br
+  %hr
   .form-group
     .actions
-      = f.submit 'Save', :class => 'btn btn-primary btn-block'
+      .col-md-6
+        = link_to 'Back', _back_url, :class => 'btn btn-default btn-block', :id => 'back'
+      .col-md-6
+        = f.submit 'Save', :class => 'btn btn-primary btn-block', :id => 'save_contact'
